--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"bin": {
 		"ppt": "./bin/ppt.njs"
 	},
-	"main": "./ppt",
+	"main": "./index.js",
 	"dependencies": {
 		"codepage":"~1.3.4",
 		"cfb":">=0.10.0",
@@ -19,11 +19,6 @@
 	},
 	"repository": { "type":"git", "url":"https://github.com/TheEmi/js-ppt.git" },
 	"scripts": {
-	},
-	"config": {
-		"blanket": {
-			"pattern": "ppt.js"
-		}
 	},
 	"bugs": { "url": "https://github.com/SheetJS/js-ppt/issues" },
 	"license": "Apache-2.0",
