--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
 	"name": "ppt2text",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"author": "sheetjs",
 	"description": "Pure JS PowerPoint 97-2003 (PPT) Parser",
-	"keywords": [ "ppt", "presentation", "powerpoint", "office" ],
+	"keywords": [
+		"ppt",
+		"presentation",
+		"powerpoint",
+		"office"
+	],
 	"bin": {
 		"ppt": "./bin/ppt.njs"
 	},
 	"main": "./index.js",
 	"dependencies": {
-		"codepage":"~1.3.4",
-		"cfb":">=0.10.0",
-		"commander":""
+		"cfb": ">=0.10.0",
+		"codepage": "~1.3.4",
+		"commander": ""
 	},
 	"devDependencies": {
-		"mocha":"",
-		"uglify-js":""
+		"@types/node": "^22.10.2",
+		"mocha": "",
+		"typescript": "^5.7.2",
+		"uglify-js": ""
 	},
-	"repository": { "type":"git", "url":"https://github.com/TheEmi/js-ppt.git" },
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/TheEmi/js-ppt.git"
+	},
 	"scripts": {
+		"build": "tsc"
 	},
-	"bugs": { "url": "https://github.com/SheetJS/js-ppt/issues" },
+	"bugs": {
+		"url": "https://github.com/SheetJS/js-ppt/issues"
+	},
 	"license": "Apache-2.0",
-	"engines": { "node": ">=0.8" }
+	"engines": {
+		"node": ">=0.8"
+	}
 }
